scenario-3/dump/cluster-0/start-20260523T091817Z/02-istio-config/envoyfilter.istio-system.global-forward-xfcc-15443.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    xcp.tetrate.io/contentHash: 184249e72fe581f03e4d3a09a67192a6
    xcp.tetrate.io/created-by-installer: "true"
  creationTimestamp: "2026-05-20T18:17:32Z"
  generation: 1
  labels:
    install.xcp.tetrate.io/owner-kind: EdgeXcp
    install.xcp.tetrate.io/owner-name: edgexcp
    install.xcp.tetrate.io/owner-version: v1alpha1
    istio.io/rev: stable
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:xcp.tetrate.io/contentHash: {}
          f:xcp.tetrate.io/created-by-installer: {}
        f:labels:
          f:install.xcp.tetrate.io/owner-kind: {}
          f:install.xcp.tetrate.io/owner-name: {}
          f:install.xcp.tetrate.io/owner-version: {}
          f:istio.io/rev: {}
        f:ownerReferences:
          k:{"uid":"6bff1010-9580-42d7-807d-3156050aef87"}: {}
      f:spec:
        f:configPatches: {}
    manager: xcp-operator-manager
    operation: Apply
    time: "2026-05-20T18:17:32Z"
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-20T18:17:36Z"
  name: global-forward-xfcc-15443
  namespace: istio-system
  ownerReferences:
  - apiVersion: install.xcp.tetrate.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: EdgeXcp
    name: edgexcp
    uid: 6bff1010-9580-42d7-807d-3156050aef87
  resourceVersion: "2774"
  uid: 98dd9720-4353-4eef-b11e-b2a0f7b084aa
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
        portNumber: 15443
    patch:
      operation: MERGE
      value:
        name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          forwardClientCertDetails: APPEND_FORWARD
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
        portNumber: 15443
    patch:
      operation: MERGE
      value:
        name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          forwardClientCertDetails: SANITIZE_SET
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0133/
    level: WARNING
    type:
      code: IST0133
