scenario-3/dump/cluster-0/start-20260523T091817Z/02-istio-config/envoyfilter.istio-system.global-periodical-access-log.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    xcp.tetrate.io/contentHash: 3d716249139f80cfae8471c645706a24
    xcp.tetrate.io/created-by-installer: "true"
  creationTimestamp: "2026-05-20T18:17:32Z"
  generation: 1
  labels:
    install.xcp.tetrate.io/owner-kind: EdgeXcp
    install.xcp.tetrate.io/owner-name: edgexcp
    install.xcp.tetrate.io/owner-version: v1alpha1
    istio.io/rev: stable
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:xcp.tetrate.io/contentHash: {}
          f:xcp.tetrate.io/created-by-installer: {}
        f:labels:
          f:install.xcp.tetrate.io/owner-kind: {}
          f:install.xcp.tetrate.io/owner-name: {}
          f:install.xcp.tetrate.io/owner-version: {}
          f:istio.io/rev: {}
        f:ownerReferences:
          k:{"uid":"6bff1010-9580-42d7-807d-3156050aef87"}: {}
      f:spec:
        f:configPatches: {}
    manager: xcp-operator-manager
    operation: Apply
    time: "2026-05-20T18:17:32Z"
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-20T18:17:36Z"
  name: global-periodical-access-log
  namespace: istio-system
  ownerReferences:
  - apiVersion: install.xcp.tetrate.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: EdgeXcp
    name: edgexcp
    uid: 6bff1010-9580-42d7-807d-3156050aef87
  resourceVersion: "2779"
  uid: 4b5390f1-fac4-47dc-a8bd-2a310b971eb0
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.tcp_proxy
    patch:
      operation: MERGE
      value:
        name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          access_log_flush_interval: 100ms
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0133/
    level: WARNING
    type:
      code: IST0133
